test/Fail/FileNotFound.agda
module FileNotFound where

import A.B.WildGoose
