test/Fail/FileNotFound.err
FileNotFound.agda:3.1-21: error: [FileNotFound]
Failed to find source of module A.B.WildGoose in any of the
following locations:
  ../A/B/WildGoose.agda
  ../A/B/WildGoose.lagda
  A/B/WildGoose.agda
  A/B/WildGoose.lagda
  agda-default-include-path/A/B/WildGoose.agda
  agda-default-include-path/A/B/WildGoose.lagda
when scope checking the declaration
  import A.B.WildGoose
